# streamlit_demo_pfs

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
.streamlit/: config.toml
