[project]
name = "dssynchackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
